--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.2",
+    "framer-motion": "^7.6.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
+    "setInterval": "^0.4.9",
     "styled-components": "^5.3.6",
+    "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
